tests/ui/imports/import-crate-var.stderr
error: imports need to be explicitly named
  --> $DIR/import-crate-var.rs:6:5
   |
LL |     m!();
   |     ^^^^
   |
   = note: this error originates in the macro `m` (in Nightly builds, run with -Z macro-backtrace for more info)
help: try renaming it with a name
  --> $DIR/auxiliary/import_crate_var.rs:5:15
   |
LL |     use $crate as name;
   |                +++++++

error: aborting due to 1 previous error

